<resources>
    <string name="app_name">DaggerHilt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_your_name">Input your name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Input your email</string>
    <string name="submit">Submit</string>
    <string name="contact">contact</string>
    <string name="name">name</string>
    <string name="email_hint">email</string>
</resources>